force-app/main/default/objects/Faculty__c/fields/corse__c.field-meta.xml
<CustomField>
    <fullName>corse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Faculty</relationshipLabel>
    <relationshipName>Facultys</relationshipName>
    <type>Lookup</type>
</CustomField>