force-app/main/default/objects/Faculty__c/fields/FactultyCount__c.field-meta.xml
<CustomField>
    <fullName>FactultyCount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Faculty</relationshipLabel>
    <relationshipName>Faculty</relationshipName>
    <type>Lookup</type>
</CustomField>