force-app/main/default/objects/Faculty__c/fields/SkillSet__c.field-meta.xml
<CustomField>
    <fullName>SkillSet__c</fullName>
    <label>SkillSet</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Skills__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>SDLC</fullName>
            </value>
            <value>
                <fullName>WaterFall</fullName>
            </value>
            <value>
                <fullName>Agile</fullName>
            </value>
            <value>
                <fullName>CoreJava</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>Css</fullName>
            </value>
            <value>
                <fullName>Html</fullName>
            </value>
            <value>
                <fullName>Jquery</fullName>
            </value>
            <value>
                <fullName>Asp.Net</fullName>
            </value>
            <value>
                <fullName>Vb.Net</fullName>
            </value>
            <value>
                <fullName>Catia</fullName>
            </value>
            <value>
                <fullName>SolidWorks</fullName>
            </value>
            <value>
                <fullName>Unigraphics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>